@@ -1,3 +1,8 @@
+pl 32
+	- Assoc::clear
+	- bf: Assoc[PreviouslyUsedAndDeletedKey] = foo
+
+	
 pl 31
 	- removed String::bool () [Sigh], String::operator char const * 
 pl 30
